# nx-health-checker

./: .gitignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  config.env  docker-compose.yml  prometheus.yml
.github/workflows/: publish-to-dockerhub.yml
src/: auth.rs  collector.rs  config.rs  database.rs  handlers.rs  main.rs  metrics.rs  models.rs  routes.rs
static/: change-password.html  dashboard.html  index.html  login.html
